<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    android:padding="8dp"
    android:id="@+id/app">

<!--    Homework #11-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="end|bottom"
            android:padding="16dp"
            android:textSize="32sp"
            android:text="0" />

        <TextView
            android:id="@+id/statusMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0000"
            android:textSize="14sp"
            android:gravity="center"
            android:padding="8dp"
            android:visibility="gone" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_clear"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_plus"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_divide"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_divide"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_times"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_multiply"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_1"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_2"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_3"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_minus"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_4"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_5"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_6"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_persent"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_percent"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />


        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_7"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_8"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_8"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_9"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_9"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_degree"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_degree"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="865dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_point"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_point"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_0"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_0"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/_equal"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button_divide2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:fontFamily="@font/lao_ui"
                android:text="@string/divideByIks"
                android:textColor="#303F9F"
                android:textSize="@dimen/button_text"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header" />
</androidx.drawerlayout.widget.DrawerLayout>
